Initial commit for blog section

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
             {% include description.html %}
             
             {% include projects.html %}
+
+            {% include blog.html %}
         </div>
 
             {% include footer.html %}
