Add Scroll to top button
changes:
- add scroll to top button
- add the css for the button
- made the button to only appear if the user scrolled down 10% of the
website view

This is a fix for issue #27

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 {% include header.html %}
 
 <body>
@@ -16,11 +16,29 @@
             {% include map.html %}
 
             {% include projects.html %}
+
         </div>
+        <a href="#top" id="scrollToTopBtn" class="scrollToTopBtn">
+            <img src="./assets/img/icons/up-arrow.png" width="100%" />
+        </a>
 
         {% include footer.html %}
     </div>
+    <script>
+        const scrollToTopBtn = document.getElementById("scrollToTopBtn")
 
+        function handleScroll() {
+            let scrollTotal = document.documentElement.scrollHeight - document.documentElement.clientHeight;
+
+            // show scrollToTopBtn if the user scrolled down 10% of the website view otherwise hide it 
+            if ((document.documentElement.scrollTop / scrollTotal ) > 0.10 )
+                scrollToTopBtn.classList.add("showScrollToTopBtn")
+            else 
+                scrollToTopBtn.classList.remove("showScrollToTopBtn")
+        }
+
+        document.addEventListener("scroll", handleScroll)
+    </script>
 </body>
 
 </html>
